[fix] content css ooverflow 속성 제거 #17

--- a/src/components/Layouts/Layout.css
+++ b/src/components/Layouts/Layout.css
@@ -45,7 +45,6 @@ html {
 .content {
   width: 100%;
   flex: 1; /* 남은 공간을 모두 차지 */
-  overflow-y: auto; /* 내용이 많을 경우 스크롤 */
 }
 
 .footer {
